# internal/bff-service/server/http/handler/router/openapi/router.go
@@ -23,7 +23,11 @@ func Register(openAPI *gin.RouterGroup) {
 	mid.Sub("openapi").Reg(openAPI, "/mcp/server/streamable", http.MethodPost, openapi.GetMCPServerStreamable, "获取MCP服务streamable消息(POST)", middleware.AuthOpenAPIByQuery(constant.AppTypeMCPServer))
 
 	//oauth
+	mid.Sub("openapi").Reg(openAPI, "/oauth/jwks", http.MethodGet, openapi.JWKS, "JWT公钥")
 	mid.Sub("openapi").Reg(openAPI, "/oauth/code/token", http.MethodPost, openapi.Token, "授权码获取token")
 	mid.Sub("openapi").Reg(openAPI, "/oauth/code/token/refresh", http.MethodPost, openapi.Refresh, "刷新Access Token")
-	mid.Sub("openapi").Reg(openAPI, "/.well-known/openid-configuration", http.MethodGet, openapi.OauthConfig, "获取授权码")
+	mid.Sub("openapi").Reg(openAPI, "/.well-known/openid-configuration", http.MethodGet, openapi.OauthConfig, "返回Endpoint配置")
+	//oauth user
+	mid.Sub("openapi").Reg(openAPI, "/oauth/userinfo", http.MethodGet, openapi.OAuthGetUserInfo, "OAuth获取用户信息", middleware.JWTAccess)
+
 }
